updated User Stories.md and expanded scaffolding

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BusMall App: Wireframe + UI Mockup</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <head>BusMall App: Wireframe + UI Mockup</head>
+    <head>
+        <h1>BusMall App: Wireframe + UI Mockup</h1>
+    </head>
 </body>
 </html>
