updated user-stories.md and added structure to user-summary.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BusMall App: Wireframe + UI Mockup</title>
+    <title>BusMall: Focus Group Survey</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <head>
-        <h1>BusMall App: Wireframe + UI Mockup</h1>
-    </head>
+    <header>
+        <h1>BusMall: Focus Group Survey</h1>
+    </header>
+    <div id="details">
+    </div>
+    <div id="photo-area">
+    </div>
+    <div id="vote">
+        <button id="vote-button">Vote!</button>
+    </div>
+    <!-- After 25 selections have been made, redirect to user-summary.html-->
+    <!-- <script src="js/app.js" type="module"></script> -->
 </body>
 </html>
