--- a/pages/user-summary.html
+++ b/pages/user-summary.html
@@ -1,5 +1,19 @@
-
- <!-- After 25 selections have been made, 
-    redirect to user-summary.html
-User summary can have very rudimentary list like: 
- "3 votes for the Banana Slicer showed 6 times".-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>BusMall: Survey Results</title>
+    <link rel="stylesheet" href="./css/styles.css">
+</head>
+<body>
+    <header>
+        <h1>BusMall: Survey Results</h1>
+    </header>
+    <!--"3 votes for the Banana Slicer showed 6 times".-->
+    <div id="vote-results">
+        <ul id="results-table"></ul>
+    </div>
+</body>
+</html>
