added wireframe for html files and tweaked html structures

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <h1>BusMall: Focus Group Survey</h1>
     </header>
     <div id="details">
+            Choose 1 of 3 (25 Total Selections Needed)
     </div>
     <div id="photo-area">
     </div>
     <div id="vote">
-        <button id="vote-button">Vote!</button>
+            <span>Which image do you prefer?</span>
+        <button id="vote-button">Cast Vote!</button>
     </div>
     <!-- After 25 selections have been made, redirect to user-summary.html-->
     <!-- <script src="js/app.js" type="module"></script> -->
