added images.js data source and linked to productsApi and app.js files

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <button id="vote-button">Cast Vote!</button>
     </div>
     <!-- After 25 selections have been made, redirect to user-summary.html-->
-    <!-- <script src="js/app.js" type="module"></script> -->
+    <script src="js/app.js" type="module"></script>
 </body>
 </html>
