--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </form>
     </div>
     <hr>
-    <script src="js/products-display.js" type="module"></script>
+    <!-- <script src="js/products-display.js" type="module"></script> -->
     <script src="js/app.js" type="module"></script>
 </body>
 </html>
