--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
     <hr>
     <!-- <script src="js/products-display.js" type="module"></script> -->
+    <!-- <script src="js/app.js" type="module"></script> -->
     <script src="js/app.js" type="module"></script>
 </body>
 </html>
