modified products-api to local storage linked products

--- a/index.html
+++ b/index.html
@@ -4,33 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BusMall: Focus Group Survey</title>
+    <title>BusMall Survey</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <h1>BusMall: Focus Group Survey</h1>
-    </header>
-    <p id="progress-count">Your Progress:</p>
-    <div id="details">
-            Choose your favorite out of 3
-    </div>
-    <div id="vote">
-            Which product do you prefer?
-            <form id="next-slide">
-        <button id="vote-button">Next (form submit?)</button>
-        <fieldset>
-            <div id="photo-area">
-                <ul id="photos">
-                </ul>
-            </div>
-
-        </fieldset>
-            </form>
-    </div>
-    <hr>
-    <!-- <script src="js/products-display.js" type="module"></script> -->
-    <!-- <script src="js/app.js" type="module"></script> -->
-    <script src="js/app.js" type="module"></script>
+    <div id="root"></div>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
