updated productsApi to appear in list

--- a/pages/report.html
+++ b/pages/report.html
@@ -1,9 +1,14 @@
-<!--It will need its own report-app.js
-(and report-index.js if you are using a separate bootstrap file).-->
-
-<!-- Create a component that displays a bar chart, for the 
-most recent survey, that shows for each product:
-
-name of product
-number of views
-number of clicks -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>BusMall Survey Report</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <div id="root"></div>
+    <script type="module" src="js/report-index.js"></script>
+</body>
+</html>
